feat(usability): Form improvements
- disable submit button while waiting for the request to finish
- other improvements

--- a/.kubernetes/deployment.yaml
+++ b/.kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       nodeSelector:
       containers:
       - name: node-api-starter-angular-app
-        image: feredean/node-api-starter-angular-app:1559296564
+        image: feredean/node-api-starter-angular-app
         imagePullPolicy: Always
         ports:
         - containerPort: 80
