docs(readme): Add docs
- add information about the project

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
-    "recommendations": [
-        "sibiraj-s.vscode-scss-formatter"
-    ]
+  "recommendations": [
+    "streetsidesoftware.code-spell-checker",
+    "sibiraj-s.vscode-scss-formatter",
+    "editorconfig.editorconfig"
+  ]
 }
