--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
   "packageRules": [
     {
       "updateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
+      "automerge": true,
+      "extends": ["schedule:monthly"]
     }
   ]
 }
